--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 *.log
+
+# ASAM standards due to licensing restrictions
+*.pdf
