--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,7 +36,7 @@ jobs:
       run: goveralls -coverprofile=covprofile -service=github
 
     - name: Setup License Server
-      run: go install github.com/google/go-licenses
+      run: go install github.com/google/go-licenses@latest
 
     - name: Create Licenses
       run: go-licenses save "github.com/asap2Go/calibrationReader" --save_path "/home/runner/work/calibrationReader/licenses" --force
