--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test ./... -v
-    
-    - name: Test RaceConditions Extended
-      run: go test -bench=. -benchtime=10s  -test.parallel 1 -race -v -covermode atomic -coverprofile=covprofile ./...
+      run: go test ./... -v -covermode atomic -coverprofile=covprofile ./...
     
     - name: Install goveralls
       run: go install github.com/mattn/goveralls@latest
@@ -34,6 +31,9 @@ jobs:
       env:
         COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: goveralls -coverprofile=covprofile -service=github
+
+    - name: Test RaceConditions Extended
+      run: go test -bench=. -benchtime=10s  -test.parallel 1 -race -v
 
     - name: Setup License Server
       run: go install github.com/google/go-licenses@latest
