--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test ./... -v -covermode atomic -coverprofile=covprofile ./...
+      run: go test ./... -race -v -covermode atomic -coverprofile=covprofile ./...
     
     - name: Install goveralls
       run: go install github.com/mattn/goveralls@latest
