--- a/.github/workflows/srec19-fuzzing.yml
+++ b/.github/workflows/srec19-fuzzing.yml
@@ -20,4 +20,4 @@ jobs:
 
     - name: Run A2L Fuzzing
       run: cd srec19
-      run: go test -fuzz=./srec19/FuzzParseHex -v
+      run: go test -fuzz=./srec19/FuzzParseHex -fuzztime=30s -v
